# json_pack

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/json_pack/: __init__.py  _json_pack.py
